# gramit

./: CHANGELOG.md  DESIGN.md  GEMINI.md  README.md  ROADMAP.md  hello.py  makefile  pyproject.toml
.gemini/: settings.json
.gemini/commands/: commit.toml  release.toml
.gemini/hooks/: gemini_logger.py  welcome.py
.github/workflows/: release.yaml  tests.yaml
examples/: key_test_tui.py  reverse_echo.py  tui_echo.py  tui_echo_with_log.py
journal/: 2026-02-22.md  2026-02-23.md  2026-02-24.md  2026-02-25.md
src/gramit/: cli.py  debouncer.py  orchestrator.py  router.py  telegram.py  terminal.py  utils.py
tests/: test_cli_args.py  test_debouncer.py  test_file_tailer.py  test_gemini_logger.py  test_orchestrator.py  test_output_stream_leak.py  test_router.py  test_router_mirror_bytes.py  test_telegram.py  test_terminal.py  test_utils.py
