[project]
name = "gramit"
version = "0.3.1"
description = "A tool to bridge local CLI applications with a remote Telegram interface."
authors = [{ name = "Alejandro Piad", email = "alepiad@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["telegram", "cli", "terminal", "bridge", "remote-control"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.6",
]

[project.urls]
Homepage = "https://github.com/apiad/gramit"
Repository = "https://github.com/apiad/gramit"
Issues = "https://github.com/apiad/gramit/issues"
Changelog = "https://github.com/apiad/gramit/blob/main/CHANGELOG.md"

[project.scripts]
gramit = "gramit.cli:run"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
asyncio_mode = "auto"
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pip-audit>=2.10.0",
    "prompt-toolkit>=3.0.52",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-coverage>=0.0",
    "rich>=14.3.3",
    "ruff>=0.15.2",
    "textual>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
